[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-spm"
description = "Machine learning for scanning probe microscopy"
authors = []
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "torch",
    "webdataset",
    "scikit-image",
]

[project.urls]
Homepage = "https://github.com/SINGROUP/ml-spm"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "mlspm.__version__"}

[tool.black]
line-length = 135

[tool.isort]
profile = 'black'
multi_line_output = 3
